# maos

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
backend/: CMakeLists.txt
backend/src/: Database.cpp  Database.h  Optimizer.cpp  Optimizer.h  Scheduler.cpp  Scheduler.h  main.cpp  schema.sql
docs/: ARCHITECTURE.md  CONCEPT.md  OPTIMIZATION.md  REQUIREMENTS.md  ROADMAP.md  SCHEDULING.md
public/models/: boiler.glb  briquettes.glb  cleaningarea.glb  dryer.glb  feedstock.glb  finecleaning.glb  marketing.glb  pileizer.glb  sale.glb  transformer.glb  wirehouse.glb
src/: App.tsx  main.tsx
src/domain/: README.md  graph.ts  index.ts  inventory.ts  nsi.ts  planning.ts  security.ts
src/features/admin/: AdminScreen.tsx  admin.css
src/features/auth/: LoginScreen.tsx
src/features/forecast/: ForecastScreen.tsx  forecast.css
src/features/nsi/: CreateDialog.tsx  EditDialog.tsx  NsiScreen.tsx  RoutingSchemeEditor.tsx  nsi.css  registries.ts  useNsi.ts
src/features/optimization/: OptimizationScreen.tsx  ParetoFrontier.tsx  ProfitDistribution.tsx  optimization.css
src/features/plan/: LoadTimeline.tsx  PlanScreen.tsx  QueueChart.tsx  plan.css
src/features/plant-scene/: Breadcrumbs.tsx  Building.tsx  Decorations.tsx  EditToolbar.tsx  EditorPanel.tsx  Facility.tsx  FlowLinks.tsx  Inspector.tsx  PlantLayout.tsx  (+9 more)
src/lib/: api.ts
src/shell/: AppShell.tsx  Modal.tsx  NavRail.tsx  Placeholder.tsx  StatusBar.tsx  TopBar.tsx  icons.tsx  screens.tsx  shell.css
src/styles/: global.css  tokens.css
(+25 files in other folders)
